--- a/test/app/src/main/res/values/strings.xml
+++ b/test/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="title_activity_pin_data_list">PinDataList</string>
 
     <string name="title_activity_map">MapBox</string>
+    <string name="holder_lat_lng">lat/lng:</string>
 </resources>
 
 
